# m365_dashboard

./: .gitignore  .gitmodules  DOCUMENTATION.md  README.md
.github/workflows/: arduino-build.yml
M365/: M365.ino  aht10.cpp  aht10.h  battery_display.cpp  battery_display.h  comms.cpp  comms.h  config.h  defines.h  display_fsm.cpp  display_fsm.h  language.h  messages.cpp  oled_utils.cpp  oled_utils.h  range_estimator.cpp  range_estimator.h  sim.cpp  sim.h  u8g2_adapter.h
M365/fonts/: odroid_charset_u8g2.h  odroid_dotmatrix_u8g2.h  odroid_sevenseg_u8g2.h  segNumb.h  segNumbBold.h  u8g2_alias.h
esp-idf/: CMakeLists.txt  idf_component.yml  partitions_ota.csv
esp-idf/components/aht10/: CMakeLists.txt  aht10.c  aht10.h
esp-idf/components/display/: CMakeLists.txt  display_fsm_port.c  display_fsm_port.h  font_system5x7mod.h  fonts_stdnum.c  fonts_stdnum.h  stdNumb.h  u8g2_integration.c  u8g2_integration.h  u8g2_port.c  u8g2_port.h
esp-idf/components/i2c_v2/: CMakeLists.txt  i2c_v2.c  i2c_v2.h
esp-idf/components/i2c_wrap/: CMakeLists.txt  i2c_wrap.c  i2c_wrap.h
esp-idf/components/m365_port/: CMakeLists.txt  arduino_compat.h  comms_port.c  comms_port.h  config.h  log  m365_port.c  m365_port.h  protocol_state.c  protocol_state.h
esp-idf/components/range/: CMakeLists.txt  range_estimator.c  range_estimator.h
esp-idf/components/settings/: CMakeLists.txt  settings.c  settings.h
esp-idf/main/: CMakeLists.txt  main.c  ssd1306.c  ssd1306.h
scripts/: build_local.sh
wokwi-esp32/: diagram.json  wokwi.toml
wokwi-nano/: diagram.json  wokwi.toml
(+4 files in other folders)
